update api docs

--- a/APIFolder/api.htm
+++ b/APIFolder/api.htm
@@ -833,6 +833,8 @@ Request Body:
                     </tr>
                     <tr class=alt><td>principal</td></tr>
                     <tr><td class=fielddesc>Loan amount.</td></tr>
+                    <tr class=alt><td>externalId</td></tr>
+                    <tr><td class=fielddesc>A place to put an external reference for this loan e.g. The ID another system uses.</td></tr>
                     <tr class=alt><td>inArrearsTolerance</td></tr>
                     <tr><td class=fielddesc></td></tr>
                     <tr class=alt><td>numberOfRepayments</td></tr>
@@ -869,12 +871,6 @@ Request Body:
                     <tr class=alt><td>interestCalculationPeriodType</td></tr>
                     <tr><td class=fielddesc>
                         <span>Example Values:</span> Same as repayment period, Daily</td></tr></td></tr>
-                    </tr>
-                </table>
-                <table class=matrixHeading>
-                    <tr class="matrixHeadingBG"><td><div class="mifosXHeading2">Field Descriptions</div></td></tr>
-                    <tr class=alt><td>externalId</td></tr>
-                    <tr><td class=fielddesc>A place to put an external reference for this client e.g. The ID another system uses.</td></tr>
                     </tr>
                 </table>
             </div>
