api docs update

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -339,7 +339,7 @@ var jqxhr = $.ajax({
                 <h3>Errors</h3>               
                 
                 <p>
-                All errors are return in JSON.
+                All errors are returned in JSON.
                 </p>
                 
             </div>
