api docs update

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -129,8 +129,9 @@
         <div class="method-section">
             <div class="method-description">
                 <h3>Mifos X API Documentation</h3>
+                <p>The goal of the Mifos X API is to empower developers to build apps on top of the Mifos X Platform.</p>
                 <p>
-                The Mifos X API is organized around
+                The API is organized around
                 <a href="http://en.wikipedia.org/wiki/Representational_State_Transfer">REST</a>.
                 </p>
                 <p>
