WIP javascript app

--- a/tempjpwNow/IndivLendHome.html
+++ b/tempjpwNow/IndivLendHome.html
@@ -884,7 +884,7 @@
 	</div>
 	<div id="navwrapper">
 	<ul id="nav" class="floatleft">
-		<li><a href="#" onclick="showILClientListing(baseApiUrl) ;">Clients</a></li>
+		<li><a href="unknown.html" onclick="showILClientListing(baseApiUrl);return false ;">Clients</a></li>
 		<li><a href="org/admin/user">User Administration</a></li>
 		<li><a href="org/admin">Organisation Administration</a></li>
 		<li><a href="reporting/flexireport">Reports</a></li>
